normalize.css & z-index fix

--- a/sass/Menu.sass
+++ b/sass/Menu.sass
@@ -13,7 +13,7 @@
     display: flex
     align-items: center
     justify-content: center
-    z-index: 99999
+    z-index: 1000000
     min-height: 30em
     .menu-item
         display: flex
